--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,11 @@
   box-sizing: border-box;
 }
 
+@font-face {
+  font-family: "fa";
+  src: url("./fonts/sort-solid.svg");
+}
+
 html {
   font-family: poppins, sans-serif;
 }
@@ -11,6 +16,20 @@ body {
   background-color: #22252c;
   background-size: cover;
   user-select: none;
+}
+
+.screen {
+  position: fixed;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  opacity: 0;
+  visibility: hidden;
+  background-color: rgba(0, 0, 0, 0.7);
+  cursor: pointer;
+  transition: opacity 0.5s, visibility 0.5s;
+  z-index: 1;
 }
 
 a {
@@ -161,20 +180,37 @@ a {
 }
 .canvas-container {
   border-radius: 30px;
-  width: 60vw;
-  height: 80vh;
+  width: 100%;
+  height: 100%;
   cursor: grab;
 }
 
 .canvas-container-outline {
-  border-radius: 30px;
+  /* border-radius: 30px; */
   height: 335.4px;
   padding: 7px;
   background-color: rgba(255, 255, 255, 0.116);
   width: 500px;
 }
 
+.footer {
+  text-align: center;
+  color: white;
+  font-size: 1.5rem;
+  margin-top: 20px;
+}
+
 /* BUTTONS */
+
+.menu-btn {
+  display: none;
+  font-size: 25px;
+  color: #149fa9;
+  background-color: white;
+  border-radius: 50%;
+  border: none;
+  outline: none;
+}
 
 .ctrl-btn {
   border-radius: 10px;
@@ -182,10 +218,8 @@ a {
   padding: 0px;
   width: 55px;
   height: 55px;
-  font-family: poppins-bold, sans-serif;
+  font-family: fa-solid;
   font-size: 2em;
-  vertical-align: top;
-
 }
 
 .gallery-header a:hover {
@@ -221,6 +255,12 @@ a {
   transition: box-shadow 0.3s;
 }
 
+.switch {
+  background-image: linear-gradient(#5a71d8, #637ce9, #5a71d8);
+  border-top-color: #8da1fa;
+  border-bottom-color: #5870da;
+}
+
 .font-selector {
   grid-row: 2;
   cursor: pointer;
@@ -232,9 +272,14 @@ a {
   outline: none;
 }
 
+.ctrl-btn.change-color {
+  padding: 3px;
+  cursor: pointer;
+
+}
+
 .share {
   background-color: #1e7cd3;
-  
 }
 
 .download {
@@ -276,4 +321,60 @@ a {
   padding: 0;
 }
 
-/* SCROLL BAR */
+@media screen and (max-width: 620px) {
+  .main-container {
+    padding: 10px;
+    width: 450px;
+  }
+  .menu-btn {
+    display: inline-block;
+    font-size: 25px;
+    color: #149fa9;
+    background-color: white;
+    border-radius: 50%;
+    border: none;
+    outline: none;
+  }
+  .menu-btn:hover {
+    cursor: pointer;
+  }
+
+  body.open-menu .main-nav {
+    transform: translateX(0);
+  }
+
+  .main-nav {
+    position: fixed;
+    right: 0;
+    top: 0;
+    width: 250px;
+    height: 100vh;
+    flex-direction: column;
+    justify-content: start;
+    padding-top: 0px;
+    background-image: linear-gradient(
+      90deg,
+      rgba(15, 155, 179, 0.85),
+      rgba(48, 187, 113, 0.85)
+    );
+    background-color: rgba(37, 37, 37, 0.9);
+    z-index: 1;
+    transform: translateX(100%);
+    transition: transform 0.4s ease-out;
+  }
+  .main-nav > * {
+    border-bottom: 1px solid rgba(37, 37, 37, 0.9);
+  }
+  .main-nav > * a {
+    display: flex;
+    margin: auto;
+    margin-bottom: auto;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 30px;
+    height: 100%;
+  }
+  .main-nav > :not(:last-child) {
+    margin-inline-end: 0;
+  }
+}
