--- a/styles/style.css
+++ b/styles/style.css
@@ -191,6 +191,7 @@ a {
   padding: 7px;
   background-color: rgba(255, 255, 255, 0.116);
   width: 500px;
+  margin-bottom: 20px;
 }
 
 .footer {
@@ -275,7 +276,6 @@ a {
 .ctrl-btn.change-color {
   padding: 3px;
   cursor: pointer;
-
 }
 
 .share {
@@ -325,6 +325,7 @@ a {
   .main-container {
     padding: 10px;
     width: 450px;
+    margin: 0;
   }
   .menu-btn {
     display: inline-block;
@@ -377,4 +378,18 @@ a {
   .main-nav > :not(:last-child) {
     margin-inline-end: 0;
   }
+
+  body.open-menu .main-screen {
+    opacity: 1;
+    visibility: visible;
+  }
+
+  
 }
+
+/* @media screen and (max-width: 860px) {
+  .main-container{
+    width: 630px;
+  }
+  
+} */
